--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@ monitor
 symulacja.log
 soprojekt_test1
 soprojekt_backup_presleep
-backup_claude_nwm
+backup_random_nwm
 wymagania_temat_projektu.txt
