bug fixy, pomylki w logice, kosmetyka

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ symulacja.log
 soprojekt_test1
 soprojekt_backup_presleep
 backup_random_nwm
-wymagania_temat_projektu.txt
+#wymagania_temat_projektu.txt
