testy, bug fixy, problemy...

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ pracownik
 kibic
 monitor
 
-symulacja.log
 soprojekt_test1
 soprojekt_backup_presleep
 backup_random_nwm
-#wymagania_temat_projektu.txt
+testy
+wymagania_temat_projektu.txt
